# cython-hidapi

./: .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  MANIFEST.in  README.rst  Readme.rst  Readme.txt  api.html  appveyor.yml  build_install_hidapi.sh  build_install_hidapi_autotools.sh  chid.pxd  examples.html  genindex.html  hid-raw.pyx  hid-windows.c  hid.pyx  hid.pyxdep  hidraw.pyx  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup-mac.py  setup-windows.py  setup.py  tests.py  tox.ini  try.py
.github/workflows/: bsd_tox.yml  tox.yml  wheels.yml
_sources/: examples.md.txt
_static/: pygments.css
doc/: conf.py  examples.md  index.rst
docs/: api.rst  conf.py  examples.md  examples.rst  index.rst
